v1 contact me submission working.

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -104,6 +104,7 @@ plugins:
 # Contact Me Form Settings
 contact:
   api:
-    url: https://api.johnsosoka.com/test/services/form/contact
-    #url: https://api.johnsosoka.com/services/form/contact
-    method:
+    #url: https://k6mta3dh76.execute-api.us-east-1.amazonaws.com/services/form/contact
+    url: https://api.johnsosoka.com/services/form/contact
+    #url: http://localhost:80/
+    method: post
