--- a/website/_config.yml
+++ b/website/_config.yml
@@ -1,6 +1,7 @@
 # the settings
 title: johnsosoka.com # site title
 description: a software engineer currently working in financial tech.
+site_est_year: 2020
 lang: en-US # default lang
 timezone: Eastern # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
