--- a/website/_config.yml
+++ b/website/_config.yml
@@ -1,6 +1,6 @@
 # the settings
 title: johnsosoka.com # site title
-description: A Charlotte based software engineer
+description: A Boise based software engineer
 site_est_year: 2020
 lang: en-US # default lang
 timezone: Eastern # set your timezone
