--- a/website/_data/menus.yml
+++ b/website/_data/menus.yml
@@ -2,33 +2,44 @@
   url: /
   external: false
 
+- title: about
+  url: /about/
+  external: false # set true if you using external link, see below
+
 - title: blog
   url: /blog/
   external: false
 
-- title: notes
+- title: bytes
   url: /notes/
   external: false
 
-- title: books
-  url: /books/
+- title: bits
+  url: /thought-feed/
   external: false
 
-- title: music
-  url: /music/
-  external: false
+#- title: books
+#  url: /books/
+#  external: false
+#
+#- title: music
+#  url: /music/
+#  external: false
+#
+#- title: minecraft
+#  url: /minecraft/
+#  external: false
 
-- title: minecraft
-  url: /minecraft/
+
+- title: etc.
+  url: /etc/
   external: false
 
 #- title: archive
 #  url: /archive/
 #  external: false
 
-- title: about
-  url: /about/
-  external: false # set true if you using external link, see below
+
 
 # Example:
 # - title: github
