WIP - creating stage, adjusting deploy scripts & syncing assets to root + www

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -90,7 +90,9 @@ exclude:
   - klise-*.gem
   - klise.gemspec
   - run-local.sh
+  - deploy.sh
   - deploy-prod.sh
+  - deploy-stage.sh
   - sosoka-banner
   - old
   - KLISE_THEME_README.md
