--- a/.github/workflows/jscom-build-deploy.yml
+++ b/.github/workflows/jscom-build-deploy.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Build site
         run: |
+          cd website
           bundle install
           bundle exec jekyll build
 
