--- a/.github/workflows/jscom-build-deploy.yml
+++ b/.github/workflows/jscom-build-deploy.yml
@@ -1,3 +1,9 @@
+# -----------------------------------------------------------
+# Deploy Jekyll site to S3 and invalidate CloudFront cache
+# Author: John Sosoka
+# Date: 2023-07-14
+# -----------------------------------------------------------
+
 name: Deploy to S3 and Invalidate CloudFront
 
 on:
@@ -27,6 +33,7 @@ jobs:
           cd website
           bundle install
           bundle exec jekyll build
+          cd ..
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -35,14 +42,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Deploy to S3 and Invalidate CloudFront
+      - name: Upload to S3
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            aws s3 sync ./_site/ s3://${{ secrets.STAGE_S3_BUCKET_NAME }}
+            aws s3 sync ./website/_site/ s3://${{ secrets.STAGE_S3_BUCKET_NAME }}
+          else
+            aws s3 sync ./website/_site/ s3://${{ secrets.WWW_S3_BUCKET_NAME }}
+            aws s3 sync ./website/_site/ s3://${{ secrets.ROOT_S3_BUCKET_NAME }}
+          fi
+
+      - name: Invalidate CloudFront Distribution(s)
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGE_CLOUDFRONT_ID }} --paths "/*"
           else
-            aws s3 sync ./_site/ s3://${{ secrets.WWW_S3_BUCKET_NAME }}
-            aws s3 sync ./_site/ s3://${{ secrets.ROOT_S3_BUCKET_NAME }}
             aws cloudfront create-invalidation --distribution-id ${{ secrets.WWW_CLOUDFRONT_ID }} --paths "/*"
             aws cloudfront create-invalidation --distribution-id ${{ secrets.ROOT_CLOUDFRONT_ID }} --paths "/*"
           fi
