--- a/.github/workflows/jscom-build-deploy.yml
+++ b/.github/workflows/jscom-build-deploy.yml
@@ -35,7 +35,7 @@ jobs:
           bundle exec jekyll build
           cd ..
 
-      - name: Set up AWS credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
