--- a/.github/workflows/jscom-build-deploy.yml
+++ b/.github/workflows/jscom-build-deploy.yml
@@ -1,3 +1,9 @@
+# -----------------------------------------------------------
+# Deploy Jekyll site to S3 and invalidate CloudFront cache
+# Author: John Sosoka
+# Date: 2023-07-14
+# -----------------------------------------------------------
+
 name: Deploy to S3 and Invalidate CloudFront
 
 on:
@@ -9,7 +15,7 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,55 +29,33 @@ jobs:
           bundler-cache: true
 
       - name: Build site
-        id: build-step
         run: |
           cd website
           bundle install
           bundle exec jekyll build
           cd ..
-          echo "::set-output name=site-dir::website/_site"
-
-  deploy-to-s3:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: $
+          aws-secret-access-key: $
+          aws-region: $
 
       - name: Upload to S3
         run: |
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            aws s3 sync ${{ needs.build.outputs.site-dir }}/ s3://${{ secrets.STAGE_S3_BUCKET_NAME }}
+          if [[ "$" == "pull_request" ]]; then
+            aws s3 sync ./website/_site/ s3://$
           else
-            aws s3 sync ${{ needs.build.outputs.site-dir }}/ s3://${{ secrets.WWW_S3_BUCKET_NAME }}
-            aws s3 sync ${{ needs.build.outputs.site-dir }}/ s3://${{ secrets.ROOT_S3_BUCKET_NAME }}
+            aws s3 sync ./website/_site/ s3://$
+            aws s3 sync ./website/_site/ s3://$
           fi
-
-  invalidate-cloudfront:
-    needs: deploy-to-s3
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Invalidate CloudFront Distribution(s)
         run: |
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGE_CLOUDFRONT_ID }} --paths "/*"
+          if [[ "$" == "pull_request" ]]; then
+            aws cloudfront create-invalidation --distribution-id $ --paths "/*"
           else
-            aws cloudfront create-invalidation --distribution-id ${{ secrets.WWW_CLOUDFRONT_ID }} --paths "/*"
-            aws cloudfront create-invalidation --distribution-id ${{ secrets.ROOT_CLOUDFRONT_ID }} --paths "/*"
+            aws cloudfront create-invalidation --distribution-id $ --paths "/*"
+            aws cloudfront create-invalidation --distribution-id $ --paths "/*"
           fi
