--- a/.github/workflows/jscom-build-deploy.yml
+++ b/.github/workflows/jscom-build-deploy.yml
@@ -38,24 +38,24 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: $
-          aws-secret-access-key: $
-          aws-region: $
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload to S3
         run: |
-          if [[ "$" == "pull_request" ]]; then
-            aws s3 sync ./website/_site/ s3://$
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            aws s3 sync ./website/_site/ s3://${{ secrets.STAGE_S3_BUCKET_NAME }}
           else
-            aws s3 sync ./website/_site/ s3://$
-            aws s3 sync ./website/_site/ s3://$
+            aws s3 sync ./website/_site/ s3://${{ secrets.WWW_S3_BUCKET_NAME }}
+            aws s3 sync ./website/_site/ s3://${{ secrets.ROOT_S3_BUCKET_NAME }}
           fi
 
       - name: Invalidate CloudFront Distribution(s)
         run: |
-          if [[ "$" == "pull_request" ]]; then
-            aws cloudfront create-invalidation --distribution-id $ --paths "/*"
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGE_CLOUDFRONT_ID }} --paths "/*"
           else
-            aws cloudfront create-invalidation --distribution-id $ --paths "/*"
-            aws cloudfront create-invalidation --distribution-id $ --paths "/*"
+            aws cloudfront create-invalidation --distribution-id ${{ secrets.WWW_CLOUDFRONT_ID }} --paths "/*"
+            aws cloudfront create-invalidation --distribution-id ${{ secrets.ROOT_CLOUDFRONT_ID }} --paths "/*"
           fi
