changing some titles, fixing/correcting posts, updating readme

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -17,7 +17,7 @@ author:
   name: john sosoka # author name
   bio: >- # tell to the world
     <a href="https://github.com/johnsosoka" target="_blank" rel="noopener">@github</a>. <br>
-    A Boise based software engineer.
+    A Boise-Based Software Engineer.
   username: jsosoka # general username
   github: johnsosoka # github username
   twitter: twitter_username # twitter username
