--- a/website/_data/menus.yml
+++ b/website/_data/menus.yml
@@ -21,7 +21,7 @@
 - title: etc.
   url: /etc/
   external: false
-# TODO - SubItems Broken...
+# Styling needs to be addressed for submenus, but they do work.
 #  subitems:
 #    - title: Books
 #      url: /Books/
