--- a/website/_config.yml
+++ b/website/_config.yml
@@ -20,7 +20,7 @@ author:
     A Boise-Based Software Engineer.
   username: jsosoka # general username
   github: johnsosoka # github username
-  twitter: twitter_username # twitter username
+#  twitter: twitter_username # twitter username
   facebook: 100070345623723 # facebook username
   email: owner-1940790@johnsosoka.com.whoisprivacyservice.org # email address
   avatar: /assets/img/avatar.jpg # change with your own avatar
