fixing links, shrinking avatar source image

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -22,7 +22,7 @@ author:
   github: johnsosoka
   facebook: 100070345623723
   email: owner-1940790@johnsosoka.com.whoisprivacyservice.org
-  avatar: /assets/img/avatar.jpg
+  avatar: /assets/img/avatar-small.jpg
 
 # URL Settings
 url: "https://www.johnsosoka.com"
