updating homepage, adjusting tagline, referencing follow up articles in old articles

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -17,7 +17,7 @@ author:
   name: John Sosoka
   bio: >-
     <a href="https://github.com/johnsosoka" target="_blank" rel="noopener">@github</a><br>
-    A Software Engineer in Boise.
+    Writing Code in Boise.
   username: jsosoka
   github: johnsosoka
   facebook: 100070345623723
