fixing links, reducsing scss footprint further

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -22,7 +22,7 @@ author:
   github: johnsosoka
   facebook: 100070345623723
   email: web@johnsosoka.com
-  avatar: /assets/img/avatar-small.jpg
+  avatar: https://media.johnsosoka.com/old/img/avatar-small.jpg
 
 # URL Settings
 url: "https://www.johnsosoka.com"
