--- a/website/_config.yml
+++ b/website/_config.yml
@@ -3,14 +3,15 @@
 # Author: john sosoka
 # Date: 2021-11-08, 2023-07-19
 # -----------------------------------------------------
-
+theme: jscom_ice
 # Basic Settings
 title: johnsosoka.com
 description: A Boise based software engineer
 site_est_year: 2020
 lang: en-US
 timezone: US/Mountain
-image: https://media.johnsosoka.com/old/img/ogp.png
+# open graph image
+og_image: https://media.johnsosoka.com/old/img/ogp.png
 
 # John Landing Page
 author:
@@ -19,7 +20,6 @@ author:
     <a href="https://github.com/johnsosoka" target="_blank" rel="noopener">@github</a><br>
     Writing Code in Boise.
   username: jsosoka
-  github: johnsosoka
   facebook: 100070345623723
   email: web@johnsosoka.com
   avatar: https://media.johnsosoka.com/old/img/avatar-small.jpg
