--- a/website/_config.yml
+++ b/website/_config.yml
@@ -6,7 +6,7 @@
 theme: jscom_ice
 # Basic Settings
 title: johnsosoka.com
-description: A Boise based software engineer
+description: Writing Code in Boise.
 site_est_year: 2020
 lang: en-US
 timezone: US/Mountain
