--- a/website/_data/carousels.yml
+++ b/website/_data/carousels.yml
@@ -2,3 +2,6 @@ baby-moon-mccall:
   - https://media.johnsosoka.com/old/img/slider/1/IMG_1061.jpeg
   - https://media.johnsosoka.com/old/img/slider/1/IMG_1066.jpeg
   - https://media.johnsosoka.com/old/img/slider/1/IMG_1075.jpeg
+grinkers-menu:
+  - https://media.johnsosoka.com/slider/grinkers/menu/Grinkers-Menu-Back.jpg
+  - https://media.johnsosoka.com/slider/grinkers/menu/Grinkers-Menu-Front.jpg
