re-arrange nav, create home-snippets page (not really in use atm)

--- a/website/_data/footer_links.yml
+++ b/website/_data/footer_links.yml
@@ -5,6 +5,9 @@
   url: https://github.com/johnsosoka
   external: false
 
+- title: consulting
+  url: /consulting/
+
 - title: rss
   url: /feed.xml
   external: false
